# qanchor-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Projectplan.md  QAnchor_Rust_CLI_Implementation_Plan.md  README.md
docs/: QIDL_Specification.md
qanchor-lang/: Cargo.toml
qanchor-lang-derive/: Cargo.toml
qanchor-lang-derive/src/: accounts_macro.rs  lib.rs  program_macro.rs
qanchor-lang/examples/: basic_program.rs  simple_program.rs
qanchor-lang/src/: accounts.rs  context.rs  error.rs  lib.rs  program.rs
qanchor-lang/tests/: macro_tests.rs
qubic-rpc/: Cargo.toml  README.md
qubic-rpc/examples/: basic_usage.rs  mainnet_test.rs  network_health_check.rs  network_test.rs  readonly_mainnet_dev.rs  testnet_integration.rs  v2_api_demo.rs
qubic-rpc/src/: client.rs  crypto.rs  error.rs  lib.rs  retry.rs  types.rs  wallet.rs
src/: error.rs  main.rs
src/cli/commands/: build.rs  clean.rs  deploy.rs  generate.rs  init.rs  localnet.rs  logs.rs  mod.rs  network.rs  qidl.rs  test.rs  upgrade.rs  wallet.rs
src/config/: mod.rs
src/generators/: base.rs  mod.rs  python.rs  typescript.rs
src/generators/templates/python/: client.py.hbs  requirements.txt.hbs  types.py.hbs
src/generators/templates/typescript/: client.hbs  package.json.hbs  types.hbs
src/localnet/: api.rs  mod.rs  server.rs  state.rs
src/qidl/: generator.rs  mod.rs  parser.rs  types.rs
src/templates/: mod.rs
src/templates/basic_oracle/: LICENSE  README.md  gitignore  lib.rs  oracle.qidl  qanchor.yaml  test.ts
src/templates/defi_amm/: README.md  amm.qidl  lib.rs  qanchor.yaml
src/utils/: mod.rs
tests/: integration_tests.rs
