[package]
name = "qanchor-cli"
version = "0.1.0"
edition = "2021"
description = "The Anchor for Qubic - Modern development framework"
authors = ["QAnchor Team <team@qanchor.dev>"]
license = "MIT"
repository = "https://github.com/qubic-anchor/qanchor-cli"
homepage = "https://qanchor.dev"
keywords = ["qubic", "blockchain", "cli", "development", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "qanchor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
handlebars = "4.0"
walkdir = "2.0"
rand = "0.8"
# Phase 2 新增依賴
async-trait = "0.1"         # 異步 trait 支援
axum = "0.7"               # HTTP 服務器 (localnet)
tower = "0.4"              # HTTP middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4"] }  # 生成唯一 ID
futures = "0.3"            # 異步工具
base64 = "0.22"            # Base64 編碼/解碼
chrono = { version = "0.4", features = ["serde"] }  # 時間處理

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"