[package]
name = "qanchor-lang-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for QAnchor language framework"
license = "MIT"
repository = "https://github.com/qubic-network/qanchor-cli"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0"

[dev-dependencies]
trybuild = "1.0"
