[package]
name = "qanchor-lang"
version = "0.1.0"
edition = "2021"
description = "QAnchor language framework for Qubic smart contract development"
license = "MIT"
repository = "https://github.com/qubic-network/qanchor-cli"
keywords = ["qubic", "blockchain", "smart-contracts", "macro", "framework"]
categories = ["development-tools", "cryptography::cryptocurrencies"]

[lib]

[dependencies]
# QAnchor derive macros
qanchor-lang-derive = { path = "../qanchor-lang-derive" }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Hashing and cryptography (for Qubic integration)
sha2 = "0.10"
ed25519-dalek = "2.0"

# Utility
once_cell = "1.19"

[dev-dependencies]
# Testing macro expansion
trybuild = "1.0"
# Testing async code
tokio-test = "0.4"

[features]
default = ["std"]
std = []
# Feature for testing macros
test-macros = []
